Fix master backport compatibility